Improve repository documentation, security, and code organization
Add new files and modify existing ones to enhance the Ansible playbooks and roles for setting up and managing a Kubernetes cluster using RKE2.

* **Add `README.md`**:
  - Provide an overview of the repository, its purpose, and how to use it.
  - Include instructions for setting up and running the project.
  - Add a section for troubleshooting common issues.

* **Modify `ansible.cfg`**:
  - Add `retry_files_enabled` option to control the creation of retry files.
  - Set `host_key_checking` option to `False` to avoid host key checking issues.
  - Add `log_path` option to specify a log file for Ansible output.
  - Set `timeout` option to a higher value to avoid connection timeouts.
  - Add `forks` option to control the number of parallel processes.
  - Set `gathering` option to `smart` to optimize fact gathering.
  - Add `roles_path` option to include additional directories for roles.
  - Set `interpreter_python` option to specify the Python interpreter to use.
  - Add `callback_whitelist` option to enable specific callback plugins.
  - Set `retry_files_save_path` option to specify the directory for retry files.

* **Modify `inventory/group_vars/all.yml`**:
  - Remove hardcoded sensitive information such as passwords.
  - Use Ansible Vault to encrypt sensitive data.

* **Add new roles and tasks**:
  - Add `roles/rke2/tasks/main.yml` to combine tasks from `roles/add-agent` and `roles/add-server` and deploy RKE2 configurations and services.
  - Add `roles/helm/tasks/main.yml` to handle Helm repository additions and deployments.
  - Add `roles/kubernetes/tasks/main.yml` to manage Kubernetes resources and configurations.
  - Add `roles/ssh/tasks/main.yml` to manage SSH configurations and key distribution.

* **Modify `site.yml`**:
  - Update roles to use consolidated roles.
  - Replace `roles/add-agent` and `roles/add-server` with `roles/rke2`.
  - Replace `roles/components` and `roles/monitoring` with `role

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -8,3 +8,33 @@ collections_paths = ./
 
 # Installs roles into [current dir]/roles/namespace.rolename
 roles_path = ./roles
+
+# Control the creation of retry files
+retry_files_enabled = False
+
+# Avoid host key checking issues
+host_key_checking = False
+
+# Specify a log file for Ansible output
+log_path = ./ansible.log
+
+# Set the timeout to a higher value to avoid connection timeouts
+timeout = 60
+
+# Control the number of parallel processes
+forks = 10
+
+# Optimize fact gathering
+gathering = smart
+
+# Include additional directories for roles
+roles_path = ./roles:./additional_roles
+
+# Specify the Python interpreter to use
+interpreter_python = auto_silent
+
+# Enable specific callback plugins
+callback_whitelist = timer, profile_tasks
+
+# Specify the directory for retry files
+retry_files_save_path = ./retry_files
