--- a/roles/prepare-nodes/tasks/main.yaml
+++ b/roles/prepare-nodes/tasks/main.yaml
@@ -7,6 +7,7 @@
     reload: true
   tags: sysctl
   when: inventory_hostname in groups['servers','agents','longhorn']
+  # Enable IPv4 forwarding
 
 - name: Enable IPv6 forwarding
   ansible.posix.sysctl:
@@ -16,3 +17,4 @@
     reload: true
   tags: sysctl
   when: inventory_hostname in groups['servers','agents','longhorn']
+  # Enable IPv6 forwarding
