--- a/roles/security/tasks/main.yml
+++ b/roles/security/tasks/main.yml
@@ -8,18 +8,21 @@
       kind: Namespace
       metadata:
         name: security-system
+  # Create security namespace
 
 - name: Deploy Network Policies
   kubernetes.core.k8s:
     kubeconfig: /etc/rancher/rke2/rke2.yaml
     state: present
     definition: "{{ lookup('template', 'network-policies.yaml.j2') | from_yaml_all | list }}"
+  # Deploy Network Policies
 
 - name: Deploy Pod Security Policies
   kubernetes.core.k8s:
     kubeconfig: /etc/rancher/rke2/rke2.yaml
     state: present
     definition: "{{ lookup('template', 'pod-security-policies.yaml.j2') | from_yaml_all | list }}"
+  # Deploy Pod Security Policies
 
 - name: Deploy Falco
   kubernetes.core.helm:
@@ -30,9 +33,11 @@
     values: "{{ lookup('template', 'falco-values.yaml.j2') | from_yaml }}"
     create_namespace: true
     wait: yes
+  # Deploy Falco
 
 - name: Deploy RBAC configurations
   kubernetes.core.k8s:
     kubeconfig: /etc/rancher/rke2/rke2.yaml
     state: present
     definition: "{{ lookup('template', 'rbac.yaml.j2') | from_yaml_all | list }}"
+  # Deploy RBAC configurations
