--- a/roles/storage/tasks/main.yml
+++ b/roles/storage/tasks/main.yml
@@ -6,21 +6,25 @@
       - nfs-common
       - lvm2
     state: present
+  # Install storage prerequisites
 
 - name: Enable and start iscsid service
   systemd:
     name: iscsid
     state: started
     enabled: yes
+  # Enable and start iscsid service
 
 - name: Configure RKE2 agent for storage nodes
   template:
     src: storage-config.yaml.j2
     dest: /etc/rancher/rke2/config.yaml
     mode: '0644'
+  # Configure RKE2 agent for storage nodes
 
 - name: Start RKE2 agent service on storage nodes
   systemd:
     name: rke2-agent
     state: started
     enabled: yes
+  # Start RKE2 agent service on storage nodes
