--- a/roles/worker/tasks/main.yml
+++ b/roles/worker/tasks/main.yml
@@ -4,21 +4,25 @@
     path: /etc/rancher/rke2
     state: directory
     mode: '0755'
+  # Create RKE2 configuration directory
 
 - name: Configure RKE2 agent
   template:
     src: worker-config.yaml.j2
     dest: /etc/rancher/rke2/config.yaml
     mode: '0644'
+  # Configure RKE2 agent
 
 - name: Install RKE2 agent service
   shell: |
     curl -sfL https://get.rke2.io | INSTALL_RKE2_TYPE="agent" sh -
   args:
     creates: /usr/local/bin/rke2
+  # Install RKE2 agent service
 
 - name: Start RKE2 agent service
   systemd:
     name: rke2-agent
     state: started
     enabled: yes
+  # Start RKE2 agent service
