Create inventory folder for hosts and cluster components versions
Create an `inventory` folder and move configuration files to it.

* Add `inventory/hosts.yaml` to define groups and list nodes.
* Add `inventory/group_vars/all.yaml` to define variables for versions and Helm repository URLs.
* Add `inventory/config.yaml` for centralized configuration values and versions.
* Add environment-specific configuration files: `inventory/dev.yaml`, `inventory/staging.yaml`, and `inventory/prod.yaml`.
* Add role-specific configuration files: `inventory/roles/admin.yaml`, `inventory/roles/components.yaml`, and `inventory/roles/monitoring.yaml`.
* Rename and move various playbook and role files to the `inventory` folder.
* Update paths in playbooks and roles to reflect the new location of moved files.
* Update `ansible.cfg` to include the new `inventory` folder in the `roles_path`.
* Update `README.md` to include instructions for updating `inventory/group_vars/all.yaml` with necessary configuration values.

---

For more details, open the [Copilot Workspace session](https://copilot-workspace.githubnext.com/Klomgor/rke2?shareId=XXXX-XXXX-XXXX-XXXX).

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -28,7 +28,7 @@ forks = 10
 gathering = smart
 
 # Include additional directories for roles
-roles_path = ./roles:./additional_roles
+roles_path = ./roles:./additional_roles:./inventory
 
 # Specify the Python interpreter to use
 interpreter_python = auto_silent
