--- a/inventory/playbook.yaml
+++ b/inventory/playbook.yaml
@@ -13,7 +13,7 @@
 
     - name: Install kubectl
       shell: |
-        curl -LO "https://dl.k8s.io/release/$(curl -L -s https://dl.k8s.io/release/stable.txt)/bin/linux/amd64/kubectl"
+        curl -LO "https://dl.k8s.io/release/{{ kubectl_version }}/bin/linux/amd64/kubectl"
         chmod +x kubectl
         mv kubectl /usr/local/bin/
       args:
@@ -27,10 +27,10 @@
 
     - name: Install Rancher CLI
       shell: |
-        curl -LO "https://github.com/rancher/cli/releases/download/v2.6.9/rancher-linux-amd64-v2.6.9.tar.gz"
-        tar xzf rancher-linux-amd64-v2.6.9.tar.gz
-        mv rancher-v2.6.9/rancher /usr/local/bin/
-        rm -rf rancher-v2.6.9 rancher-linux-amd64-v2.6.9.tar.gz
+        curl -LO "https://github.com/rancher/cli/releases/download/{{ rancher_cli_version }}/rancher-linux-amd64-{{ rancher_cli_version }}.tar.gz"
+        tar xzf rancher-linux-amd64-{{ rancher_cli_version }}.tar.gz
+        mv rancher-{{ rancher_cli_version }}/rancher /usr/local/bin/
+        rm -rf rancher-{{ rancher_cli_version }} rancher-linux-amd64-{{ rancher_cli_version }}.tar.gz
       args:
         creates: /usr/local/bin/rancher
 
